--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "16.9.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-icons": "3.10.0",
     "react-scripts": "3.4.1",
     "tailwindcss": "1.2.0",
     "typescript": "3.8.3"
