connecting to the real API

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "swipejobs",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://test.swipejobs.com",
   "sideEffects": [
     "*.css"
   ],
