--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "test": "react-app-rewired test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject",
     "build:style": "tailwind build src/styles/index.css -o src/styles/tailwind.generated.css",
     "lint": "yarn eslint --fix --ext .js,.jsx,.ts,.tsx ./"
@@ -70,7 +70,8 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "3.1.1",
     "eslint-plugin-react": "7.16.0",
-    "eslint-plugin-react-hooks": "4.0.0",
+    "eslint-plugin-react-hooks": "2.2.0",
+    "jest-environment-jsdom-sixteen": "1.0.3",
     "postcss-cli": "7.1.0",
     "prettier": "1.19.1",
     "react-app-rewired": "2.1.5",
